Fixing the alignment of the logo-title for fixed width to be right up to be edge-snug

--- a/zen-fixed/style.css
+++ b/zen-fixed/style.css
@@ -23,9 +23,6 @@ body {
   margin: 0 auto;            /* center the page - optional */
 }
 
-#search {
-  float:right;
-  position:relative;
-  top:5px;
-  margin-right:0px;
+#logo-title {
+  margin: 10px 0 0 0;
 }
